# hypercubes

./: CLAUDE.md  README.md  error_message.txt  ndcubes.ipynb  pyproject.toml  requirements.txt
.ipynb_checkpoints/: ndcubes-checkpoint.ipynb
hypercubes/: __init__.py  core.py  utils.py  visualization.py
hypercubes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
