[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypercubes"
version = "0.1.0"
description = "Interactive n-dimensional hypercube visualization using ipywidgets and bqplot"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.0.0",
    "ipython>=8.0.0",
    "ipywidgets>=8.0.0",
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "bqplot>=0.12.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0",
    "isort>=5.10.0",
]

[tool.setuptools]
packages = ["hypercubes"]

[tool.black]
line-length = 88
target-version = ["py310"]